		take over.



v0.33.20        10-Feb-2002

	upgrade:
		Compile sources and install binaries. Restart the BBS.
		Enter mbsetup, this will upgrade the databases.
		Go into global configuration, exit and save, this will update
		the main configuration (add default macro path).
		Edit the message groups and file groups for new settings.

	general:
		Added structures for area maintenance with area lists.
		Installing the maptabs don't give any errors anymore when
		installed as user mbse. The location of the source isn't
		important anymore to install the maptabs.
		Updated German, Spanish and Galego languages.
		The location of the sourcefiles is not important anymore.
		Added detection of vpopmail in default installation path.
		Changed language prompts 372, 373, 387, 388, 389, 390 and 438.
		Added the turbodiesel macro language so that reports can be
		customized per language and reports. Thanks to Redy Rodriguez
		for finding this one and implement it into mbse bbs.
		Splitted the No TCP settings in No IBN, No IFC and No ITN.
		Removed settings for Non-hold mail and Pickup Primary.
		Removed several setting for http setup, this is now handled
		by the macro templates.
		The rc files for joe, the external editor are now copied to
		/usr/lib/joe or /etc/joe depending on your distribution.

	common.a:
		Added 2 functions to return the OS name and CPU family.
		Added a function to return the right tearline.
		Added support for ext3 filesystem in diskspace check.
		Fixed lharc archives return code to LHA.
		Changed mkprod.awk script to support Debian Woody.

	clcomm.a
		Added counter for mailer TCP/IP sessions.

	diesel.a
		New library for parsing macro templates.

	mbsetup:
		In message groups added default settings for auto area
		creation.
		Added servicename filemgr to the filemgr services.
		When adding or deleting a message area, several extra checks
		are done. The JAM base is also removed when deleting.