@@ -12,7 +12,7 @@
 </HEAD>
 <BODY>
 <BLOCKQUOTE>
-<h5>Last update 09-Feb-2002</h5>
+<h5>Last update 22-Apr-2002</h5>
 <P>&nbsp;<P>
 
 <h1>MBSE BBS Basic Installation</h1>
@@ -39,8 +39,7 @@ layout looks like this:<br>
 /opt/mbse/english/txtfiles     0755  Default english ANSI files
 /opt/mbse/etc                  0775  System configuration files
 /opt/mbse/fdb                  0775  Files database
-/opt/mbse/ftp/css              0755  Stylesheet for MBSE BBS pages.
-/opt/mbse/ftp/pub              0755  Default FTP root for download areas.
+/opt/mbse/ftp/pub              0775  Default FTP root for download areas.
 /opt/mbse/galego/macro         0755  N/A
 /opt/mbse/galego/menus         0755  Galego menu files
 /opt/mbse/galego/txtfiles      0755  Galego ANSI files
